# hass-danfoss-ally-gateway

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt  whitelist.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ha-compatibility.yml  hassfest.yml  lint.yml  release.yml  tests.yml  validate.yml
config/: configuration.yaml
custom_components/danfoss_ally_gateway/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  entity.py  icons.json  manifest.json  schedule.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/danfoss_ally_gateway/backend/: __init__.py  z2m.py  zha.py
custom_components/danfoss_ally_gateway/coordinator/: __init__.py  coordinator.py  ext_temp.py  helpers.py  load_balancer.py  preheat.py  schedule_manager.py  setpoint.py  time_sync.py  window.py
custom_components/danfoss_ally_gateway/translations/: en.json
scripts/: develop  setup
tests/: conftest.py  test_backend_z2m.py  test_backend_zha.py  test_binary_sensor.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_helpers.py  test_init.py  test_schedule.py  test_select.py  test_sensor.py  test_services.py  test_switch.py
